--- a/welcomepage.html
+++ b/welcomepage.html
@@ -1,1 +1,34 @@
-  <!--    TULIS KODE WELCOME PAGE ndok kene riss       -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Halaman Login</title>
+    <link rel="stylesheet" href="gaya.css"
+</head>
+<body>
+    <div id="login-box">
+    <div class="left-box">
+        <h1>Daftar</h1>
+        <input type="text" name="username" placeholder="Nama lengkap">
+        <input type="text" name="email" placeholder="Email">
+        <input type="password" name="password" placeholder="Password">
+        <input type="password" name="password" placeholder=" Re Password">
+        <input type="submit" name = "signup-button" value = "Daftar">
+    </div>
+
+    <div class="right-box">
+        <span class="signinwith">Daftar Menggunakan<br/>Media Sosial</span>
+        <button class="Sosial facebook">Datar menggunakan Facebook</button>
+        <button class="Sosial google">Datar menggunakan Twitter</button>
+        <button class="Sosial facebook">Daftar menggunakan Google+</button>
+    </div>
+
+    <div class="or"> Atau </div>
+
+
+
+<Script src="style.js"></Script>
+</body>
+</html>
