--- a/welcomepage.html
+++ b/welcomepage.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Halaman Login</title>
-    <link rel="stylesheet" href="gaya.css"
+    <link rel="stylesheet" href="welcomepage.css"
 </head>
 <body>
     <div id="login-box">
@@ -14,19 +14,18 @@
         <input type="text" name="username" placeholder="Nama lengkap">
         <input type="text" name="email" placeholder="Email">
         <input type="password" name="password" placeholder="Password">
-        <input type="password" name="password" placeholder=" Re Password">
-        <input type="submit" name = "signup-button" value = "Daftar">
+        <input type="password" name="password" placeholder="Re Password">
+        <a href="Kariruhon.html"><input type="submit" name = "signup-button" value = "Daftar"></a>
     </div>
 
     <div class="right-box">
-        <span class="signinwith">Daftar Menggunakan<br/>Media Sosial</span>
-        <button class="Sosial facebook">Datar menggunakan Facebook</button>
-        <button class="Sosial google">Datar menggunakan Twitter</button>
-        <button class="Sosial facebook">Daftar menggunakan Google+</button>
+        <span class="signinwith" >Daftar Menggunakan<br/>Media Sosial</span>
+        <a href="http://facebook.com/" target="_blank"><button class="facebook">Datar menggunakan Facebook</button></a>
+        <a href="http://twitter.com/" target="_blank"><button class="twitter">Datar menggunakan Twitter</button></a>
+        <a href="http://accounts.google.com" target="_blank"><button class="google">Daftar menggunakan Google+</button></a>
     </div>
 
     <div class="or"> Atau </div>
-
 
 
 <Script src="style.js"></Script>
