--- a/welcomepage.html
+++ b/welcomepage.html
@@ -4,30 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Halaman Login</title>
-    <link rel="stylesheet" href="welcomepage.css"
+    <link rel="stylesheet" type="text/css" href="kariruhon.css">
+    <title>Doyan Baca</title>
 </head>
 <body>
-    <div id="login-box">
-    <div class="left-box">
-        <h1>Daftar</h1>
-        <input type="text" name="username" placeholder="Nama lengkap">
-        <input type="text" name="email" placeholder="Email">
-        <input type="password" name="password" placeholder="Password">
-        <input type="password" name="password" placeholder="Re Password">
-        <a href="Kariruhon.html"><input type="submit" name = "signup-button" value = "Daftar"></a>
+  <header>
+    <div class="container">
+      <div class="header-left">
+        <img class="logo" src="logo canbaku.jpeg">
+        <h1 class="logo-heading">CanBaku</h1>
+      </div>
+      <div class="header-right">
+        <a href="#">Lessons</a>
+        <a href="#">Sign in</a>
+        <a href="#" class="login">Log in</a>
+      </div>
     </div>
-
-    <div class="right-box">
-        <span class="signinwith" >Daftar Menggunakan<br/>Media Sosial</span>
-        <a href="http://facebook.com/" target="_blank"><button class="facebook">Datar menggunakan Facebook</button></a>
-        <a href="http://twitter.com/" target="_blank"><button class="twitter">Datar menggunakan Twitter</button></a>
-        <a href="http://accounts.google.com" target="_blank"><button class="google">Daftar menggunakan Google+</button></a>
-    </div>
-
-    <div class="or"> Atau </div>
+  </header>
 
 
-<Script src="style.js"></Script>
+
+
+  <footer>
+    <h1>Created by Tiger Alliance</h1>
+    <h3>2021</h3>
+
+
+  </footer>
 </body>
 </html>
