--- a/welcomepage.html
+++ b/welcomepage.html
@@ -4,32 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="kariruhon.css">
     <title>Doyan Baca</title>
+    <link rel="stylesheet" href="gaya.css">
 </head>
 <body>
-  <header>
-    <div class="container">
-      <div class="header-left">
-        <img class="logo" src="logo canbaku.jpeg">
-        <h1 class="logo-heading">CanBaku</h1>
-      </div>
-      <div class="header-right">
-        <a href="#">Lessons</a>
-        <a href="#">Sign in</a>
-        <a href="#" class="login">Log in</a>
-      </div>
+    
+
+    <div id="login-box">
+    <div class="left-box">
+        <h1>Daftar</h1>
+        <input type="text" name="username" placeholder="Nama lengkap">
+        <input type="text" name="email" placeholder="Email">
+        <input type="password" name="password" placeholder="Password">
+        <input type="password" name="password" placeholder=" Re Password">
+        <input type="submit" name = "signup-button" value = "Daftar">
     </div>
-  </header>
+
+    <div class="right-box">
+        <span class="signinwith"></span>
+        <button class="Sosial facebook">Datar menggunakan Facebook</button>
+        <button class="Sosial google">Datar menggunakan Twitter</button>
+        <button class="Sosial facebook">Daftar menggunakan Google+</button>
+    </div>
+
+    <div class="or"> Atau </div>
 
 
 
-
-  <footer>
-    <h1>Created by Tiger Alliance</h1>
-    <h3>2021</h3>
-
-
-  </footer>
+<Script src="style.js"></Script>
 </body>
 </html>
