--- a/welcomepage.html
+++ b/welcomepage.html
@@ -6,22 +6,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doyan Baca</title>
     <link rel="stylesheet" href="welcomepage.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
-<body>
+<body>  
 
-  <div class="email">
-    <label for="mailInput" class="form-label">Username</label>
-    <input type="text" autocomplete="off" class="form-control" id="mailInput"
-        placeholder="Username Anda">
+  <div class="ps-4 pt-5">
+    <button class="btn btn-outline-danger btn-sm text-center animate__animated animate__heartBeat"
+    type="button" style="padding-left: 20px;padding-right: 20px;margin-left: 10px;"
+    data-bs-toggle="modal" data-bs-target="#loginModal">LOGIN</button>
   </div>
-  <div class="password">
-    <label for="passInput" class="col-sm-2 col-form-label">Password</label>
-    <input type="password" class="form-control" id="passInput" placeholder="Password Anda">
-  </div>
-  </div>
-  <div class="lgin">
-  <p id="slh" style="padding-right: 250px; display: none; font-size:15px" class="text-danger animate_animated animate_shakeX salah">Password Salah!</p>
-  <button onclick="login()" type="button" class="btn btn-danger" id="btnLogin">LOGIN</button>
+  
+
+
+    <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <h5 class="modal-title" id="modalLabel"><strong>MASUK</strong></h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                  <div class="alert alert-warning d-flex align-items-center" role="alert">
+                      <i class="fas fa-info-circle text-warning"></i>
+                      &nbsp; &nbsp;
+                      <div style="font-size: 13px;">
+                          username: administrator<br>
+                          password: sudo123
+                      </div>
+                  </div>
+                  <div class="mb-3">
+                      <label for="mailInput" class="form-label">Username</label>
+                      <input type="text" autocomplete="off" class="form-control" id="mailInput"
+                          placeholder="Username Anda">
+                  </div>
+                  <div class="mb-3">
+                      <label for="passInput" class="col-sm-2 col-form-label">Password</label>
+                      <input type="password" class="form-control" id="passInput" placeholder="Password Anda">
+                  </div>
+              </div>
+              <div class="modal-footer">
+                  <p id="slh" style="padding-right: 250px; display: none; font-size:15px" class="text-danger animate__animated animate__shakeX salah">Password Salah!</p>
+                  <button onclick="login()" type="button" class="btn btn-danger" id="btnLogin">LOGIN</button>
+              </div>
+          </div>
+      </div>
+    </div>
 
 </div>
   </div>
@@ -46,8 +75,8 @@
 
     <div class="or"> Atau </div>
 
-    <script type="text/javascript"></script>
-    <Script src="style.js"></Script>
+    <Script type="text/javascript" src="style.js"></Script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </body>
 </html>
