--- a/welcomepage.html
+++ b/welcomepage.html
@@ -55,21 +55,21 @@
 </div>
   </div>
     <div id="login-box">
-    <div class="left-box">
+      <div class="left-box">
         <h1>Daftar</h1>
         <input type="text" name="username" placeholder="Nama lengkap">
         <input type="text" name="email" placeholder="Email">
         <input type="password" name="password" placeholder="Password">
         <input type="password" name="password" placeholder=" Re Password">
-        <input type="submit" name = "signup-button" value = "Daftar">
+        <a href="beranda.html"><input type="submit" name = "signup-button" value = "Daftar"></a>
     </div>
 
     <div class="right-box">
         <span class="signinwith"></span>
         <div class="sosmed">
-          <button class="facebook">Datar menggunakan Facebook</button>
-          <button class="twitter">Datar menggunakan Twitter</button>
-          <button class="google">Daftar menggunakan Google+</button>
+          <a href="http://facebook.com" target="_blank"><button class="facebook">Datar menggunakan Facebook</button></a>
+          <a href="http://twitter.com" target="_blank"><button class="twitter">Datar menggunakan Twitter</button></a>
+          <a href="https://accounts.google.com/signin/v2/identifier?hl=ID&flowName=GlifWebSignIn&flowEntry=ServiceLogin" target="_blank"><button class="google">Daftar menggunakan Google</button></a>
         </div>
     </div>
 
